aliasing and identifying people, setting properties, and lib updated (issue #2 fixed)

--- a/www/templates/mixpanel.html
+++ b/www/templates/mixpanel.html
@@ -4,6 +4,8 @@
     <ion-content>
       <button class="button" ng-click="initMixpanel()">init mixpanel</button>
       <button class="button" on-tap="initMixpanel()">init mixpanel ontap</button>
+      <button class="button" ng-click="alias()">alias</button>
+      <button class="button" ng-click="identify()">identify</button>
       <button class="button" ng-click="track()">track something</button>
       <button class="button" ng-click="flush()">flush</button>
     </ion-content>
